# adventofcode

./: README.md
day02_python/: puzzle2.py3
day05_python/: puzzle1.py3
day06_python/: exercise6_1.py3
day07_python/: puzzle.py3
day08_python/: puzzle1.py3
day09_python/: puzzle.py3
day10_python/: puzzle.py3
day11_python/: puzzle.py3
day12_python/: puzzle.py3
day13_python/: puzzle.py3
day14_python/: puzzle.py3  puzzle2.py3
day15_python/: puzzle.py3
day16_python/: puzzle.py3
day17_haskell/: day17.cabal
day17_haskell/app/: .Main.hs.swp  Main.hs
day18_python/: puzzle.py3
day19_python/: puzzle1.py3  puzzle2.py3
day1_python/: puzzle1.py3
day20_python/: puzzle1.py3  puzzle2.py3
day21_python/: puzzle.py3
day22_python/: input_example1.txt  input_example2.txt  puzzle.py3  puzzle2.py3
day23_python/: puzzle.py  puzzle1.py3  tests.py
day24_python/: puzzle1.py  puzzle2.py
day25_python/: puzzle.py
day3_haskell/: my-project.cabal
day3_haskell/app/: Main.hs
day3_haskell/src/: Lib.hs
day3_python/: puzzle1.py3
day5_python/: puzzle2.py3
day6_python/: exercise6_2.py3
day7_python/: puzzle1.py3  test.txt
day8_python/: puzzle2.py3
day9_python/: puzzle.py3
